--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "file-saver": "^1.3.8",
     "gojs": "^1.8.29",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
