--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
     "core-js": "^2.5.4",
+    "event-stream": "^3.3.4",
     "file-saver": "^1.3.8",
     "gojs": "^1.8.29",
     "hammerjs": "^2.0.8",
@@ -51,6 +52,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
