--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "event-stream": "^4.0.1",
     "file-saver": "^2.0.2",
     "gojs": "^2.0.13",
+    "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,7 +36,7 @@
     "@angular/cli": "^10.1.7",
     "@angular/compiler-cli": "^10.1.6",
     "@angular/language-service": "^10.1.6",
-    "@compodoc/compodoc": "^1.1.9",
+    "@compodoc/compodoc": "^1.1.11",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^12.11.1",
@@ -51,6 +52,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "4.0.3",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.11.0"
   }
 }
